# LearningSong

./: .gitignore  2025-chemistry.md  DEV-SCRIPTS.md  FIREBASE_REMOVAL_ANALYSIS.md  FIX_VERIFICATION.md  MERGE-SUMMARY.md  QUICK-START.md  QUICK_FIX_SUMMARY.md  README.md  SONG_PLAYBACK_ANALYSIS.md  SONG_VARIATIONS_BUG_FIX_PLAN.md  SUNO_API_DUAL_SONG_ANALYSIS.md  TODO.md  VERIFICATION_RESULTS.md  start-dev-single.ps1  start-dev.bat  start-dev.ps1  stop-dev.ps1  three_songs.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py  prompts.py
backend/tests/: BROWSER_CONNECTION_GUIDE.md  CONSOLE_MONITOR_GUIDE.md  E2E_CHROME_SETUP.md  E2E_DOCUMENTATION_INDEX.md  E2E_DUAL_SONG_SELECTION_GUIDE.md  E2E_HELPERS_GUIDE.md  E2E_PREREQUISITES_CHECKLIST.md  E2E_SETUP_SUMMARY.md  E2E_TEST_EXECUTION_GUIDE.md  E2E_TEST_GUIDE.md  E2E_TEST_SUMMARY.md  E2E_TROUBLESHOOTING_QUICK_REFERENCE.md  ERROR_HANDLING_QUICK_REFERENCE.md  ERROR_HANDLING_TEST_GUIDE.md  FINAL_CHECKPOINT_SUMMARY.md  MOCK_DATA_CUSTOMIZATION_GUIDE.md  NETWORK_MOCK_GUIDE.md  NETWORK_MONITOR_GUIDE.md  PAGE_A_TEST_GUIDE.md  PAGE_B_TEST_GUIDE.md  README.md  RESPONSIVE_TEST_SUMMARY.md  SCREENSHOT_INTEGRATION_EXAMPLE.md  SCREENSHOT_SYSTEM_GUIDE.md  TASK_11_IMPLEMENTATION_SUMMARY.md  TASK_12_IMPLEMENTATION_SUMMARY.md  TASK_13_IMPLEMENTATION_SUMMARY.md  TASK_3_IMPLEMENTATION_SUMMARY.md  TASK_4_IMPLEMENTATION_SUMMARY.md  TASK_5_IMPLEMENTATION_SUMMARY.md  TASK_6_IMPLEMENTATION_SUMMARY.md  TASK_7_IMPLEMENTATION_SUMMARY.md  TASK_9_IMPLEMENTATION_SUMMARY.md  TEST_REPORT_GUIDE.md  USER_JOURNEY_TEST_GUIDE.md  (+46 more)
(+385 files in other folders)
